{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 386,
  "lineage": "946db73f-f22f-7a68-1005-44a50f7ed4c2",
  "resources": [
    {
      "module": "module.asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:358244527067:security-group/sg-02d767940e58a6fce",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02d767940e58a6fce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20230405094237261300000003",
            "name_prefix": "terraform-",
            "owner_id": "358244527067",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myASGSecurityGroup"
            },
            "tags_all": {
              "Name": "myASGSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce02c2bf31cb7c74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:358244527067:loadbalancer/app/tf-lb-20230405094248504300000006/26d0cbc952269e01",
            "arn_suffix": "app/tf-lb-20230405094248504300000006/26d0cbc952269e01",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20230405094248504300000006-1658528863.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:358244527067:loadbalancer/app/tf-lb-20230405094248504300000006/26d0cbc952269e01",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20230405094248504300000006",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0764c25f5a4ed665b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-023700a1b9bc4c013"
              },
              {
                "subnet_id": "subnet-051c2bb3288cd511b"
              },
              {
                "subnet_id": "subnet-06b72c639053b347d"
              }
            ],
            "subnets": [
              "subnet-023700a1b9bc4c013",
              "subnet-051c2bb3288cd511b",
              "subnet-06b72c639053b347d"
            ],
            "tags": {
              "Name": "myLoadBalancer"
            },
            "tags_all": {
              "Name": "myLoadBalancer"
            },
            "vpc_id": "vpc-0ce02c2bf31cb7c74",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.lb.aws_security_group.allow_http",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:358244527067:listener/app/tf-lb-20230405094248504300000006/26d0cbc952269e01/e80331a220e0ad08",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:358244527067:listener/app/tf-lb-20230405094248504300000006/26d0cbc952269e01/e80331a220e0ad08",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:358244527067:loadbalancer/app/tf-lb-20230405094248504300000006/26d0cbc952269e01",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "myLbListener-HTTP"
            },
            "tags_all": {
              "Name": "myLbListener-HTTP"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb.aws_lb.this",
            "module.lb.aws_security_group.allow_http",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "forward_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:358244527067:targetgroup/tf-20230405094237256400000002/bc5aca336c985041",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:358244527067:listener-rule/app/tf-lb-20230405094248504300000006/26d0cbc952269e01/e80331a220e0ad08/222b7e097ccad593",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:358244527067:listener-rule/app/tf-lb-20230405094248504300000006/26d0cbc952269e01/e80331a220e0ad08/222b7e097ccad593",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:358244527067:listener/app/tf-lb-20230405094248504300000006/26d0cbc952269e01/e80331a220e0ad08",
            "priority": 100,
            "tags": {
              "Name": "myLbListenerRule-ForwardAll"
            },
            "tags_all": {
              "Name": "myLbListenerRule-ForwardAll"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb.aws_lb.this",
            "module.lb.aws_lb_listener.http",
            "module.lb.aws_lb_target_group.main",
            "module.lb.aws_security_group.allow_http",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:358244527067:targetgroup/tf-20230405094237256400000002/bc5aca336c985041",
            "arn_suffix": "targetgroup/tf-20230405094237256400000002/bc5aca336c985041",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:358244527067:targetgroup/tf-20230405094237256400000002/bc5aca336c985041",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20230405094237256400000002",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "myLbTargetGroup-main"
            },
            "tags_all": {
              "Name": "myLbTargetGroup-main"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ce02c2bf31cb7c74"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:358244527067:security-group/sg-0764c25f5a4ed665b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0764c25f5a4ed665b",
            "ingress": [],
            "name": "terraform-20230405094237255300000001",
            "name_prefix": "terraform-",
            "owner_id": "358244527067",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myLbSecurityGroup"
            },
            "tags_all": {
              "Name": "myLbSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce02c2bf31cb7c74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-265867900",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0764c25f5a4ed665b",
            "security_group_rule_id": "sgr-0201f467106354d8b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb.aws_security_group.allow_http",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1079892763",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0764c25f5a4ed665b",
            "security_group_rule_id": "sgr-0c56095b5bf44a40d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb.aws_security_group.allow_http",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:358244527067:internet-gateway/igw-0eea2c3a2581655f6",
            "id": "igw-0eea2c3a2581655f6",
            "owner_id": "358244527067",
            "tags": {
              "Name": "myInternetGateway"
            },
            "tags_all": {
              "Name": "myInternetGateway"
            },
            "vpc_id": "vpc-0ce02c2bf31cb7c74"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:358244527067:route-table/rtb-094e7d32850413461",
            "id": "rtb-094e7d32850413461",
            "owner_id": "358244527067",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eea2c3a2581655f6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ce02c2bf31cb7c74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a7bc89998f21b1f",
            "route_table_id": "rtb-094e7d32850413461",
            "subnet_id": "subnet-023700a1b9bc4c013"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f4b3746fe2aa943",
            "route_table_id": "rtb-094e7d32850413461",
            "subnet_id": "subnet-06b72c639053b347d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08896a45be410729f",
            "route_table_id": "rtb-094e7d32850413461",
            "subnet_id": "subnet-051c2bb3288cd511b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:358244527067:subnet/subnet-023700a1b9bc4c013",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023700a1b9bc4c013",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "358244527067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet0"
            },
            "tags_all": {
              "Name": "public-subnet0"
            },
            "vpc_id": "vpc-0ce02c2bf31cb7c74"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:358244527067:subnet/subnet-06b72c639053b347d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b72c639053b347d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "358244527067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet1"
            },
            "tags_all": {
              "Name": "public-subnet1"
            },
            "vpc_id": "vpc-0ce02c2bf31cb7c74"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:358244527067:subnet/subnet-051c2bb3288cd511b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051c2bb3288cd511b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "358244527067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet2"
            },
            "tags_all": {
              "Name": "public-subnet2"
            },
            "vpc_id": "vpc-0ce02c2bf31cb7c74"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:358244527067:vpc/vpc-0ce02c2bf31cb7c74",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-090035b189dc861af",
            "default_route_table_id": "rtb-02bcac46f69180131",
            "default_security_group_id": "sg-06b93cd269d7f99ea",
            "dhcp_options_id": "dopt-01170076252f90e9b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ce02c2bf31cb7c74",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02bcac46f69180131",
            "owner_id": "358244527067",
            "tags": {
              "Name": "myMainVPC"
            },
            "tags_all": {
              "Name": "myMainVPC"
            }
          }
        }
      ]
    }
  ]
}